[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/Character/Idle.png" type="Texture" id=1]
[ext_resource path="res://Audio/buzzer-or-wrong-answer-20582-_AudioTrimmer.com_.ogg" type="AudioStream" id=2]
[ext_resource path="res://Scripts/Character.gd" type="Script" id=9]
[ext_resource path="res://Sprites/Character/attack/tile001.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Character/attack/tile004.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Character/attack/tile000.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Character/attack/tile002.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Character/attack/tile003.png" type="Texture" id=14]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Fly",
"speed": 20.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 11 ) ],
"loop": false,
"name": "Shoot",
"speed": 20.0
} ]

[node name="Character" type="Node2D"]
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.353546, 0 )
scale = Vector2( 3, 3 )
frames = SubResource( 8 )
animation = "Fly"
playing = true

[node name="BulletPosition" type="Position2D" parent="."]
position = Vector2( 35.7259, 6.93942 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Wrong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -2.0

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
